--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-
 body {
-		background: #ffffff;
-    font-family: 'Work Sans', sans-serif;
-    font-style: normal;
-		font-weight: 300;
-    overflow-x: hidden;
+  background: #ffffff;
+  font-family: 'Work Sans', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  overflow-x: hidden;
 }
 
 
@@ -12,16 +11,21 @@ body {
     Typorgraphy              
 -----------------------------------------*/
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-style: normal;
   font-weight: 300;
   letter-spacing: 0.5px;
 }
 
 h1 {
-    font-size: 62px;
-    padding-bottom: 14px;
-    margin-bottom: 0px;
+  font-size: 62px;
+  padding-bottom: 14px;
+  margin-bottom: 0px;
 }
 
 h2 {
@@ -41,15 +45,16 @@ h4 {
 }
 
 p {
-    color: #777;
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 26px;
-    letter-spacing: 0.2px;
+  color: #777;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 36px;
+  letter-spacing: 0.3px;
 }
 
 strong {
   font-weight: 400;
+  font-size: 20px;
 }
 
 .btn-success:focus {
@@ -62,7 +67,7 @@ strong {
     General               
 -----------------------------------------*/
 
-html{
+html {
   -webkit-font-smoothing: antialiased;
 }
 
@@ -73,7 +78,10 @@ a {
   transition: 0.5s;
   text-decoration: none !important;
 }
-a:hover, a:active, a:focus {
+
+a:hover,
+a:active,
+a:focus {
   color: #4d638c;
   outline: none;
 }
@@ -140,7 +148,7 @@ a:hover, a:active, a:focus {
   border-radius: 40px;
   position: relative;
   -webkit-animation: sk-innerCircle 1s linear infinite;
-  animation: sk-innerCircle 1s linear infinite; 
+  animation: sk-innerCircle 1s linear infinite;
 }
 
 .sk-spinner-wordpress .sk-inner-circle {
@@ -151,26 +159,32 @@ a:hover, a:active, a:focus {
   position: absolute;
   border-radius: 8px;
   top: 5px;
-  left: 5px; 
+  left: 5px;
 }
 
 @-webkit-keyframes sk-innerCircle {
   0% {
     -webkit-transform: rotate(0);
-            transform: rotate(0); }
+    transform: rotate(0);
+  }
 
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
 
 @keyframes sk-innerCircle {
   0% {
     -webkit-transform: rotate(0);
-            transform: rotate(0); }
+    transform: rotate(0);
+  }
 
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg); } }
+    transform: rotate(360deg);
+  }
+}
 
 
 
@@ -179,13 +193,14 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 .navbar-default {
-    background: #ffffff;
-    padding: 18px 0;
-    border: none;
-    margin-top: 62px;
+  background: #ffffff;
+  padding: 18px 0;
+  border: none;
+  margin-top: 62px;
 }
 
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
   border-color: transparent;
 }
 
@@ -199,49 +214,49 @@ a:hover, a:active, a:focus {
 }
 
 .navbar-default .navbar-nav li a {
-    color: #777;
-    font-size: 16px;
-    letter-spacing: 1px;
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-    padding-right: 22px;
-    padding-left: 22px;
+  color: #777;
+  font-size: 16px;
+  letter-spacing: 1px;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  padding-right: 22px;
+  padding-left: 22px;
 }
 
-.navbar-default .navbar-nav > li a:hover {
-    color: #333 !important;
+.navbar-default .navbar-nav>li a:hover {
+  color: #333 !important;
 }
 
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-    color: #777;
-    background-color: transparent;
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus {
+  color: #777;
+  background-color: transparent;
 }
 
 .navbar-default .navbar-nav li a:hover,
- .navbar-default .navbar-nav .active > a {
-    color: #333;
-  }
+.navbar-default .navbar-nav .active>a {
+  color: #333;
+}
 
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-    color: #333;
-    background-color: transparent;
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+  color: #333;
+  background-color: transparent;
 }
 
 .navbar-default .navbar-toggle {
-     border: none;
-     padding-top: 10px;
-  }
+  border: none;
+  padding-top: 10px;
+}
 
 .navbar-default .navbar-toggle .icon-bar {
-    background: #bdc3c7;
-    border-color: transparent;
-  }
+  background: #bdc3c7;
+  border-color: transparent;
+}
 
 .navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus { 
+.navbar-default .navbar-toggle:focus {
   background-color: transparent;
 }
 
@@ -252,20 +267,20 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #home {
-    background-size: cover;
-    background-position: center center;
-    display: -webkit-box;
-    display: -webkit-flex;
-     display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-     align-items: center;
-    position: relative;
-    text-align: center;
-    padding-top: 60px;
-    padding-bottom: 40px;
+  background-size: cover;
+  background-position: center center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 #home hr {
@@ -346,12 +361,12 @@ a:hover, a:active, a:focus {
 }
 
 #portfolio .portfolio-item {
-    position: absolute;
-    top:50%;
-    left: 50%;
-    -webkit-transform:translate(-50%,-50%);
-      -ms-transform:translate(-50%,-50%);
-          transform:translate(-50%,-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 #portfolio .portfolio-thumb:hover .portfolio-overlay {
@@ -374,8 +389,10 @@ a:hover, a:active, a:focus {
 
 #single-project .col-md-12,
 #single-project .col-md-6,
-#single-project .col-md-4 {
+#single-project .col-md-4,
+#single-project .col-md-3 {
   padding-left: 0px;
+  padding-right: 0px;
   padding-bottom: 22px;
 }
 
@@ -386,6 +403,7 @@ a:hover, a:active, a:focus {
 #single-project .text-center strong {
   display: block;
   padding-top: 12px;
+  padding-bottom: 16px;
 }
 
 #single-project a {
@@ -395,6 +413,14 @@ a:hover, a:active, a:focus {
   padding-left: 14px;
 }
 
+#single-project p,
+#single-project h3 {
+  text-align: left;
+}
+
+/* #single-project a:hover{
+  text-decoration-line: underline !important;
+} */
 
 
 /*---------------------------------------
@@ -605,9 +631,9 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 footer {
-    border-top: 1px solid #f0f0f0;
-    padding: 100px 0px;
-    position: relative;
+  border-top: 1px solid #f0f0f0;
+  padding: 100px 0px;
+  position: relative;
 }
 
 footer .col-md-3 .fa {
@@ -634,32 +660,32 @@ footer .footer-copyright {
 -----------------------------------------*/
 
 .social-icon {
-    position: relative;
-    padding: 0;
-    margin: 0;
-    text-align: center;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
 
 .social-icon li {
-    display: inline-block;
-    list-style: none;
+  display: inline-block;
+  list-style: none;
 }
 
 .social-icon li a {
-    color: #777;
-    cursor: pointer;
-    font-size: 16px;
-    text-decoration: none;
-    transition: all 0.4s ease-in-out;
-    text-align: center;
-    vertical-align: middle;
-    position: relative;
-    margin: 22px 12px 10px 12px;
+  color: #777;
+  cursor: pointer;
+  font-size: 16px;
+  text-decoration: none;
+  transition: all 0.4s ease-in-out;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+  margin: 22px 12px 10px 12px;
 }
 
 .social-icon li a:hover {
-    color: #000;
-    transform: scale(1.1);
+  color: #000;
+  transform: scale(1.1);
 }
 
 
