--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,9 @@ a:focus {
   text-decoration-line: underline !important;
 } */
 
+#single-project .box-shadow {
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+}
 
 /*---------------------------------------
    Contact section              
